// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`  should render MetaInfo component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dashlet"
      >
        <div
          class="ecos-well ecos-panel dashlet"
        >
          <div
            class="ecos-panel__head dashlet__header-wrapper"
          >
            <div
              class="dashlet__header"
            >
              <span
                class="dashlet__caption"
              >
                instance-admin.info-widget.title
              </span>
              <span
                class="ecos-badge ecos-badge_info ecos-badge_large"
              />
              <div
                class="dashlet__header-actions"
              />
            </div>
          </div>
          <div
            class="ecos-panel__body dashlet__body"
          >
            <div
              class="dashlet__body-content"
            >
              <div
                class="bpmn-admin-info"
              >
                <div
                  class="bpmn-admin-info__main"
                >
                  <div
                    class="bpmn-admin-info__main-item"
                  >
                    <div
                      class="ecos-panel-title ecos-panel-title_color-gray ecos-panel-title_narrow"
                    >
                      instance-admin.info-widget.document
                    </div>
                    <button
                      class="ecos-btn ecos-btn_disabled ecos-btn_blue"
                      disabled=""
                    >
                      <div
                        class="ecos-btn__content"
                      >
                        instance-admin.info-widget.not-defined
                        <i
                          class="icon-small-right"
                        />
                      </div>
                    </button>
                  </div>
                  <div
                    class="bpmn-admin-info__main-item"
                  >
                    <div
                      class="ecos-panel-title ecos-panel-title_color-gray ecos-panel-title_narrow"
                    >
                      instance-admin.info-widget.actions-title
                    </div>
                    <div
                      class="dropdown"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="true"
                        class=""
                      >
                        <button
                          class="ecos-btn bpmn-admin-info__actions ecos-btn_blue"
                        >
                          <div
                            class="ecos-btn__content"
                          >
                            instance-admin.info-widget.choose-action
                            <i
                              class="icon-small-down"
                            />
                          </div>
                        </button>
                      </div>
                      <div
                        aria-hidden="true"
                        class="dropdown-menu dropdown-menu-right"
                        container="body"
                        role="menu"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                  <div
                    class="bpmn-admin-info__main-item"
                  >
                    <div
                      class="ecos-panel-title ecos-panel-title_color-gray ecos-panel-title_narrow"
                    >
                      instance-admin.info-widget.definition-ref
                    </div>
                    <button
                      class="ecos-btn ecos-btn_disabled ecos-btn_blue"
                      disabled=""
                    >
                      <div
                        class="ecos-btn__content"
                      >
                        instance-admin.info-widget.not-defined
                        <i
                          class="icon-small-right"
                        />
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="bpmn-admin-info__secondary"
                >
                  <span>
                    instance-admin.info-widget.version: instance-admin.info-widget.not-defined
                  </span>
                  <span>
                    instance-admin.info-widget.start-time: instance-admin.info-widget.not-defined
                  </span>
                </div>
              </div>
            </div>
            <div
              class="dashlet__body-indent dashlet__body-indent_bottom"
            />
          </div>
        </div>
        <div />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dashlet"
    >
      <div
        class="ecos-well ecos-panel dashlet"
      >
        <div
          class="ecos-panel__head dashlet__header-wrapper"
        >
          <div
            class="dashlet__header"
          >
            <span
              class="dashlet__caption"
            >
              instance-admin.info-widget.title
            </span>
            <span
              class="ecos-badge ecos-badge_info ecos-badge_large"
            />
            <div
              class="dashlet__header-actions"
            />
          </div>
        </div>
        <div
          class="ecos-panel__body dashlet__body"
        >
          <div
            class="dashlet__body-content"
          >
            <div
              class="bpmn-admin-info"
            >
              <div
                class="bpmn-admin-info__main"
              >
                <div
                  class="bpmn-admin-info__main-item"
                >
                  <div
                    class="ecos-panel-title ecos-panel-title_color-gray ecos-panel-title_narrow"
                  >
                    instance-admin.info-widget.document
                  </div>
                  <button
                    class="ecos-btn ecos-btn_disabled ecos-btn_blue"
                    disabled=""
                  >
                    <div
                      class="ecos-btn__content"
                    >
                      instance-admin.info-widget.not-defined
                      <i
                        class="icon-small-right"
                      />
                    </div>
                  </button>
                </div>
                <div
                  class="bpmn-admin-info__main-item"
                >
                  <div
                    class="ecos-panel-title ecos-panel-title_color-gray ecos-panel-title_narrow"
                  >
                    instance-admin.info-widget.actions-title
                  </div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class=""
                    >
                      <button
                        class="ecos-btn bpmn-admin-info__actions ecos-btn_blue"
                      >
                        <div
                          class="ecos-btn__content"
                        >
                          instance-admin.info-widget.choose-action
                          <i
                            class="icon-small-down"
                          />
                        </div>
                      </button>
                    </div>
                    <div
                      aria-hidden="true"
                      class="dropdown-menu dropdown-menu-right"
                      container="body"
                      role="menu"
                      tabindex="-1"
                    />
                  </div>
                </div>
                <div
                  class="bpmn-admin-info__main-item"
                >
                  <div
                    class="ecos-panel-title ecos-panel-title_color-gray ecos-panel-title_narrow"
                  >
                    instance-admin.info-widget.definition-ref
                  </div>
                  <button
                    class="ecos-btn ecos-btn_disabled ecos-btn_blue"
                    disabled=""
                  >
                    <div
                      class="ecos-btn__content"
                    >
                      instance-admin.info-widget.not-defined
                      <i
                        class="icon-small-right"
                      />
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="bpmn-admin-info__secondary"
              >
                <span>
                  instance-admin.info-widget.version: instance-admin.info-widget.not-defined
                </span>
                <span>
                  instance-admin.info-widget.start-time: instance-admin.info-widget.not-defined
                </span>
              </div>
            </div>
          </div>
          <div
            class="dashlet__body-indent dashlet__body-indent_bottom"
          />
        </div>
      </div>
      <div />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`  should render corrent columns for called processes 1`] = `
[
  {
    "attribute": "calledProcessDisp",
    "dataField": "calledProcessDisp",
    "newFormatter": {
      "config": {
        "getUrl": [Function],
      },
      "type": "link",
    },
    "text": "Called instance",
  },
  {
    "attribute": "bpmnDefEngineDisp",
    "dataField": "bpmnDefEngineDisp",
    "newFormatter": {
      "config": {
        "getUrl": [Function],
      },
      "type": "link",
    },
    "text": "Process definition",
  },
  {
    "attribute": "callActivityId",
    "dataField": "callActivityId",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Element",
  },
  {
    "attribute": "id",
    "dataField": "id",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "State",
  },
]
`;

exports[`  should render corrent columns for external tasks 1`] = `
[
  {
    "attribute": "id",
    "dataField": "dispId",
    "newEditor": {
      "config": {},
      "type": "text",
    },
    "predicates": [
      {
        "label": "predicate.eq",
        "needValue": true,
        "value": "eq",
      },
    ],
    "searchable": true,
    "searchableByText": true,
    "sortable": true,
    "text": "ID",
  },
  {
    "attribute": "activityId",
    "dataField": "activityId",
    "newEditor": {
      "config": {},
      "type": "text",
    },
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "predicates": [
      {
        "label": "predicate.eq",
        "needValue": true,
        "value": "eq",
      },
    ],
    "searchable": true,
    "searchableByText": true,
    "text": "Element",
  },
  {
    "attribute": "retries",
    "dataField": "retries",
    "text": "Retries",
  },
  {
    "attribute": "workerId",
    "dataField": "workerId",
    "newEditor": {
      "config": {},
      "type": "text",
    },
    "predicates": [
      {
        "label": "predicate.eq",
        "needValue": true,
        "value": "eq",
      },
    ],
    "searchable": true,
    "searchableByText": true,
    "text": "Handler's ID",
  },
  {
    "attribute": "lockExpirationTime",
    "dataField": "lockExpirationTime",
    "newFormatter": {
      "config": {
        "format": "LLL",
      },
      "type": "date",
    },
    "text": "Expiration time",
  },
  {
    "attribute": "topicName",
    "dataField": "topic",
    "newEditor": {
      "config": {},
      "type": "text",
    },
    "predicates": [
      {
        "label": "predicate.eq",
        "needValue": true,
        "value": "eq",
      },
    ],
    "searchable": true,
    "searchableByText": true,
    "text": "Topic",
  },
  {
    "attribute": "priority",
    "dataField": "priority",
    "sortable": true,
    "text": "Priority",
  },
]
`;

exports[`  should render corrent columns for incidents 1`] = `
[
  {
    "attribute": "message",
    "dataField": "message",
    "newEditor": {
      "config": {},
      "type": "text",
    },
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "searchable": true,
    "searchableByText": true,
    "text": "Message",
  },
  {
    "attribute": "processInstance",
    "dataField": "processInstance",
    "newEditor": {
      "config": {},
      "type": "text",
    },
    "newFormatter": {
      "config": {
        "getUrl": [Function],
      },
      "type": "link",
    },
    "text": "Process instance",
  },
  {
    "attribute": "created",
    "dataField": "created",
    "newFormatter": {
      "config": {
        "format": "LLL",
      },
      "type": "date",
    },
    "text": "Created",
  },
  {
    "attribute": "activityId",
    "dataField": "activityId",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Element",
  },
  {
    "attribute": "activityId",
    "dataField": "activityId",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Failed element",
  },
  {
    "attribute": "incidentType",
    "dataField": "incidentType",
    "text": "Type",
  },
  {
    "attribute": "note",
    "dataField": "note",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Note",
  },
  {
    "attribute": "id",
    "dataField": "id",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Actions",
  },
]
`;

exports[`  should render corrent columns for job definitions 1`] = `
[
  {
    "attribute": "id",
    "dataField": "dispId",
    "sortable": true,
    "text": "ID",
  },
  {
    "attribute": "created",
    "dataField": "created",
    "newFormatter": {
      "config": {
        "format": "LLL",
      },
      "type": "date",
    },
    "text": "Created",
  },
  {
    "attribute": "dueDate",
    "dataField": "dueDate",
    "newFormatter": {
      "config": {
        "format": "LLL",
      },
      "type": "date",
    },
    "sortable": true,
    "text": "Due date",
  },
  {
    "attribute": "retries",
    "dataField": "retries",
    "sortable": true,
    "text": "Retries",
  },
  {
    "attribute": "activityId",
    "dataField": "activityId",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Element",
  },
  {
    "attribute": "failedActivityId",
    "dataField": "failedActivityId",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Failed element",
  },
  {
    "attribute": "configuration",
    "dataField": "configuration",
    "text": "Configuration",
  },
  {
    "attribute": "id",
    "dataField": "id",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Actions",
  },
]
`;

exports[`  should render corrent columns for variables 1`] = `
[
  {
    "attribute": "name",
    "dataField": "name",
    "newEditor": {
      "config": {},
      "type": "text",
    },
    "searchable": true,
    "searchableByText": true,
    "sortable": true,
    "text": "Name",
  },
  {
    "attribute": "type",
    "dataField": "type",
    "text": "Type",
  },
  {
    "attribute": "value",
    "dataField": "value",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Value",
  },
  {
    "attribute": "scope",
    "dataField": "scope",
    "disableSelect": true,
    "newEditor": {
      "config": {
        "journalId": "bpmn-process-def",
        "multiple": false,
      },
      "type": "journal",
    },
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "searchable": true,
    "searchableByText": true,
    "text": "Scope",
  },
  {
    "attribute": "id",
    "classes": "common-table-column__small",
    "dataField": "id",
    "newFormatter": {
      "config": {
        "Component": [Function],
      },
      "type": "component",
    },
    "text": "Actions",
  },
]
`;
